--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,56 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  font-family: sans-serif;
+  background: #ffefa9;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  cursor: default;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h2{
+  color: black;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  max-width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  background: rgb(255, 255, 255);
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.todo-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.card {
-  padding: 2em;
+.todo-item {
+  padding: 12px 16px;
+  margin-bottom: 10px;
+  background: #9c9c9c;
+
+  border-radius: 10px;
+  cursor: grab;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: all 0.2s ease;
+
+
 }
 
-.read-the-docs {
-  color: #888;
+.todo-item:active {
+  cursor: grabbing;
+  background-color: rgb(41, 96, 248);
+  border-color: #66aaff;
+  transform: scale(1.1);
+}
+
+.todo-item.drag-over {
+  background-color:rgb(41, 96, 248);
+}
+
+.todo-item.dragging-active {
+  cursor: grabbing !important;
+  opacity: 1; /* Kein halbtransparentes Ghost-Ding */
 }
